--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Template</title>
-    <link rel="icon" type="image/png" href="favicon.png">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css"/>
+    <title>Picture In Picture</title>
+    <link rel="icon" type="image/png" href="picture-in-picture.png">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,3 +12,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
+
