Made start button ask for prompt agian if load in prompt request is denied

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <!-- Video -->
     <video src="" id="video" controls height="360px" width="640px" hidden></video>
+    <div id="screenContainer"></div>
     <!-- Button -->
     <div class="button-container">
       <button id="button">START</button>
